# XAI-PdMNet-Bench-Industry-5.0

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  TECHNICAL_DECISIONS.md  generate_figures.py  pyproject.toml  requirements.txt
Paper research/: references.bib  template.tex
colab/: README.md  gen_notebook.py  predictive_maintenance_ai4i2020.ipynb  requirements.txt
data/: README.md
data/phm2010/: phm2010_dataset_status.csv  phm2010_feature_table.csv  phm2010_release_manifest.json
docs/: ARCHITECTURE.md  REPO_UPLOAD_CHECKLIST.md
results/: ai4i_deep_pt_model_metrics.csv  ai4i_deep_training_config.csv  ai4i_model_details.csv  ai4i_trained_model_metrics.csv  b2_features.csv  csv_inventory.csv  dataset_feature_summary.csv  dataset_inventory.csv  fast_recomputed_baselines.csv  fast_release_model_metrics.csv  manifest.json  model_inventory.csv  phm2010_model_details.csv  phm_model_metrics.csv  phm_training_config.csv  reproduction_results_bundle.xlsx  reproduction_status.csv
scripts/: build_results_bundle.py  export_notebook_cells.py  organize_trained_models.py  prepare_phm2010_release_dataset.py  run_all_training.py  train_ai4i_release_models.py  train_fast_release_models.py  train_phm_release_models.py  train_torch_ai4i_deep_models.py
src/xai_pdmbench/: __init__.py  constants.py  data.py  features.py
trained_models/: ALL_TRAINED_MODELS_INVENTORY.csv  README.md
trained_models/ai4i/: ai4i_feature_columns.json  alexnet1d_safe.pt  alexnet1d_safe_weights.pt  cnn_lstm_thr031.pt  cnn_lstm_thr031_weights.pt  fast_feature_columns.json  numpy_knn_k5.npz  (+7 more)
(+11 files in other folders)
